--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 .resume {
+  background: red;
   margin: 50px auto;
   border: 1px solid #f5f5f5;
   box-shadow: 1px 1px 7px 7px #f5f5f5;
